--- a/templates/bibliothek_suche.html
+++ b/templates/bibliothek_suche.html
@@ -17,8 +17,8 @@
 
 <div class="titleContainer">
     <h1>Bibliothek</h1>
-    <form method="get" action="{{ url_for('games_suchen_bibliothek') }}">
-        <input type="text" class="searchBox" name="query" placeholder="Suche in deiner Bibliothek..." value="{{ search_query }}">
+    <form method="get" action="{{ url_for('games_suchen_bibliothek') }}" class="searchBar">
+        <input type="text" name="query" placeholder="Suche in deiner Bibliothek..." value="{{ search_query }}">
         <button type="submit" id="submitBtn">Suchen</button>
     </form>
 </div>
