--- a/templates/register.html
+++ b/templates/register.html
@@ -39,6 +39,10 @@
             <div class="formSubmitBtn">
                 <button id="submitBtn" type="submit">Register</button>
             </div>
+
+            <div class="switch-form-link">
+                <p>Hast du bereits ein Konto? <a href=" {{ url_for('login') }} ">Anmelden</a></p>
+            </div>
         </form>
     </div>
     <script src="../static/js/auth.js"></script>
